@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.eclipse.sw360</groupId>
   <artifactId>sw360</artifactId>
-  <version>19.2.0</version>
+  <version>20.0.0-beta</version>
   <packaging>pom</packaging>
   <name>Eclipse SW360</name>
   <description>Eclipse SW360 compliance management application</description>
@@ -78,7 +78,7 @@
     <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
     <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
-    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.6.1</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
     <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
@@ -92,11 +92,11 @@
     <json-path.version>2.9.0</json-path.version>
     <json-smart.version>2.5.2</json-smart.version>
     <json-simple.version>4.0.1</json-simple.version>
-    <jackson.version>2.19.1</jackson.version>
+    <jackson.version>2.19.2</jackson.version>
 
     <!-- Dependencies version properties -->
     <assertj.version>3.27.3</assertj.version>
-    <byte-buddy.version>1.17.5</byte-buddy.version>
+    <byte-buddy.version>1.17.6</byte-buddy.version>
     <cloudantsdk.version>0.10.4</cloudantsdk.version>
     <commons-cli.version>1.9.0</commons-cli.version>
     <commons-codec.version>1.18.0</commons-codec.version>
@@ -105,11 +105,11 @@
     <commons-configuration.version>1.10</commons-configuration.version>
     <commons-csv.version>1.14.0</commons-csv.version>
     <commons-io.version>2.19.0</commons-io.version>
-    <commons-lang3.version>3.17.0</commons-lang3.version>
+    <commons-lang3.version>3.18.0</commons-lang3.version>
     <commons-text.version>1.13.1</commons-text.version>
     <sun.mail.version>2.0.1</sun.mail.version>
-    <dom4j.version>2.1.4</dom4j.version>
-    <equalsverifier.version>4.0.2</equalsverifier.version>
+    <dom4j.version>2.2.0</dom4j.version>
+    <equalsverifier.version>4.0.6</equalsverifier.version>
     <failureaccess.version>1.0.3</failureaccess.version>
     <findbugs-annotations.version>1.3.9-1</findbugs-annotations.version>
     <git-commit-id.version>9.0.2</git-commit-id.version>
@@ -136,7 +136,7 @@
     <joda-time.version>2.14.0</joda-time.version>
     <junit-dataprovider.version>1.13.1</junit-dataprovider.version>
     <junit.version>4.13.2</junit.version>
-    <log4j2.version>2.24.3</log4j2.version>
+    <log4j2.version>2.25.1</log4j2.version>
     <maven-javadoc.version>3.11.2</maven-javadoc.version>
     <mockito.version>5.18.0</mockito.version>
     <okhttp.version>4.12.0</okhttp.version>
@@ -149,21 +149,17 @@
     <project-lombok.version>1.18.38</project-lombok.version>
     <slf4j.version>2.0.17</slf4j.version>
     <spotless.version>2.29.0</spotless.version>
-    <spring-boot.version>3.3.3</spring-boot.version>
+    <spring-boot.version>3.5.3</spring-boot.version>
     <spring-restdocs.version>3.0.1</spring-restdocs.version>
     <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
-    <spring-security-oauth2-authorization-server.version>1.4.3</spring-security-oauth2-authorization-server.version>
-    <spring-security.version>6.5.0</spring-security.version>
+    <spring-security-oauth2-authorization-server.version>1.5.1</spring-security-oauth2-authorization-server.version>
+    <spring-security.version>6.5.1</spring-security.version>
     <springdoc-openapi-stater-common.version>2.8.9</springdoc-openapi-stater-common.version>
-    <springframework.version>6.2.8</springframework.version>
+    <springframework.version>6.2.9</springframework.version>
     <thrift.version>0.20.0</thrift.version>
-    <tika.version>1.28.5</tika.version>
     <wiremock.version>3.13.1</wiremock.version>
-    <version.hibernate.javax.persistence>1.0.0.Final</version.hibernate.javax.persistence>
     <arquillian-graphene.version>2.5.4</arquillian-graphene.version>
-    <version.jee.jaxb.api>2.3.1</version.jee.jaxb.api>
-    <keycloak.version>26.2.5</keycloak.version>
-    <spring.security.crypto>6.3.3</spring.security.crypto>
+    <keycloak.version>26.3.1</keycloak.version>
     <org.owasp.encoder.version>1.3.1</org.owasp.encoder.version>
     <write.properties.file.version>2.0.0</write.properties.file.version>
   </properties>
@@ -712,6 +708,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -874,7 +874,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.2.7</version>
+            <version>3.2.8</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
